# splunk-sigma

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: LICENSE  README.md
app/default/: app.conf  commands.conf  macros.conf  savedsearches.conf
app/default/data/ui/nav/: default.xml
app/default/data/ui/views/: attack_coverage.xml
docs/: API_MODE.md  SPLUNK_INSTALL.md
samples/: attack_samples.jsonl
scripts/: demo.py  demo_api.sh  install_local.sh  package.sh  sigma_watch.py
tests/: test_bundled_rules.py  test_evaluator.py
